force-app/main/default/objects/Technical_Baseline_Spec__c/Technical_Baseline_Spec__c.object-meta.xml
<CustomObject>
    <label>기술 기준 세부항목</label>
    <nameField>
        <label>Technical Baseline Spec Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>