force-app/main/default/objects/Technical_Baseline_Spec__c/fields/Measurement_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Item_Code__c</fullName>
    <label>측정 항목 코드</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>유량</fullName>
            </value>
            <value>
                <fullName>수은</fullName>
            </value>
            <value>
                <fullName>차압</fullName>
            </value>
            <value>
                <fullName>전류</fullName>
            </value>
            <value>
                <fullName>누기</fullName>
            </value>
            <value>
                <fullName>체결토크</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>