force-app/main/default/objects/Technical_Baseline_Spec__c/fields/Spec_Value__c.field-meta.xml
<CustomField>
    <fullName>Spec_Value__c</fullName>
    <label>기준값</label>
    <precision>9</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>