force-app/main/default/objects/Technical_Baseline_Spec__c/fields/Technical_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Technical_Baseline__c</fullName>
    <label>기준선</label>
    <referenceTo>Technical_Baseline__c</referenceTo>
    <relationshipLabel>Technical Baseline Spec</relationshipLabel>
    <relationshipName>Technical_Baseline_Spec</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>