force-app/main/default/objects/Technical_Baseline_Spec__c/fields/Threshold_Max__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Max__c</fullName>
    <label>허용 상한</label>
    <precision>9</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>