force-app/main/default/objects/Technical_Baseline_Spec__c/fields/Threshold_Min__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Min__c</fullName>
    <label>허용 하한</label>
    <precision>9</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>