force-app/main/default/objects/Technical_Baseline_Spec__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>단위</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L/min</fullName>
            </value>
            <value>
                <fullName>℃</fullName>
            </value>
            <value>
                <fullName>kPa</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>N·m</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>